--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,10 @@
     padding: 0;
 }
 
+body {
+    background-color: #484848;
+}
+
 @font-face {
     src: url("./static/Inter-Regular.ttf");
     font-family: "Inter";
